# sandbox

./: .clang-format  .dir-locals.el  Cargo.toml  MODULE.bazel  README.md
advent_of_code/: BUILD.bazel  build_defs.bzl  cxx_aoc_day.bzl  test_driver.cc
advent_of_code/2024/: BUILD.bazel  day_01.cc  day_02.cc  day_02_output.txt  day_03.cc  day_03_output.txt  day_04.cc  day_04_output.txt  day_05.cc  day_05_output.txt  day_06.cc  day_06_output.txt  day_07.cc  day_07_output.txt  day_08.cc  day_08_output.txt  day_09.cc  day_09_output.txt  day_10.cc  day_10_output.txt  day_11.cc  day_11_output.txt  day_12.cc  day_13.cc  day_13_output.txt  day_14.cc  day_15.cc  day_15_output.txt  day_19.cc
asm/: hello.asm
cpp/: BUILD.bazel  MODULE.bazel  add_two_numbers.cc  arena.cc  arena.hpp  climbing_stairs.cc  com_leetcode_problems_all_o_one.cc  com_leetcode_problems_beautiful_binary_string.cc  com_leetcode_problems_best_time_to_buy_and_sell_stock.cc  com_leetcode_problems_binary_tree_paths.cc  com_leetcode_problems_complement_of_base_10_integer.cc  com_leetcode_problems_contains_duplicate_ii.cc  com_leetcode_problems_contiguous_array.cc  com_leetcode_problems_count_of_smaller_numbers_after_self.cc  com_leetcode_problems_count_square_submatrices_with_all_ones.cc  com_leetcode_problems_count_the_number_of_fair_pairs.cc  com_leetcode_problems_count_unguarded_cells_in_the_grid.cc  com_leetcode_problems_course_schedule.cc  com_leetcode_problems_defuse.cc  com_leetcode_problems_detect_capital.cc  com_leetcode_problems_different_ways_to_add_parentheses.cc  com_leetcode_problems_divide_players_into_teams_of_equal_skill.cc  com_leetcode_problems_find_bottom_left_tree_value.cc  com_leetcode_problems_find_the_length_of_the_longest_common_prefix.cc  com_leetcode_problems_find_the_power_of_k-size_subarrays_i.cc  com_leetcode_problems_flip_columns_for_maximum_number_of_equal_rows.cc  com_leetcode_problems_house_robber.cc  com_leetcode_problems_invert_binary_tree.cc  com_leetcode_problems_ipo.cc  com_leetcode_problems_isomorphic_strings.cc  com_leetcode_problems_koko_eating_bananas.cc  com_leetcode_problems_kth_largest_sum_in_binary_tree.cc  com_leetcode_problems_kth_smallest_in_lexicographical_order.cc  com_leetcode_problems_largest_combination_with_bitwise_and_greater_than_zero.cc  com_leetcode_problems_lexicographical_numbers.cc  com_leetcode_problems_longest_subarray_with_max_bitwise_and.cc  com_leetcode_problems_longest_substring_vowels.cc  com_leetcode_problems_make_sum_divisible_by_p.cc  com_leetcode_problems_max_points.cc  com_leetcode_problems_maximum_beauty_of_an_array_after_applying_operation.cc  (+69 more)
java/leetcode/: com_leetcode_problems_base_7.java  com_leetcode_problems_filter_restaurants_by_vegan_friendly_price_and_distance.java  com_leetcode_problems_student_attendance_record_ii  com_leetcode_problems_subtree_of_another_tree.java
js/: baseConversion.js
lisp/: cl-sandbox.lisp
python/: binary_tree_zigzag_level_order_traversal.py  com_leetcode_problems_combination_sum_ii.py  com_leetcode_problems_find_mode_in_binary_search_tree.py  com_leetcode_problems_long_pressed_name.py  com_leetcode_problems_sum_root_to_leaf_numbers.py
rs/src/: di_string_match.rs  lib.rs  majority_element.rs  prime_number_of_set_bits_in_binary_representation.rs  unique_paths_2.rs  valid_perfect_square.rs
rust/src/: com_leetcode_problems_find_the_longest_common_prefix.rs  com_leetcode_problems_number_of_atoms.rs  com_leetcode_problems_three_sum.rs  com_leetcode_problems_two_sum.rs  com_leetcode_problems_valid_parentheses.rs  lib.rs
