module(
    name = "sandbox",
    repo_name = "com_github_proprietary_sandbox"
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "google_benchmark", version = "1.8.5")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
