cc_library(
    name = "test_case_helper",
    copts = ["-std=c++20"],
    srcs = ["test_case_helper.hpp", "test_case_helper.cc"],
    hdrs = ["test_case_helper.hpp"],
)

cc_test(
    name = "spiral_matrix_iv",
    copts = ["-std=c++20"],
    srcs = ["com_leetcode_problems_spiral_matrix_iv.cc", "utils.hpp"],
    deps = [
        "@googletest//:gtest_main"
    ]
)

cc_binary(
    name = "cxx20_concepts",
    copts = ["-std=c++20"],
    srcs = ["cxx20_concepts.cc"],
)

cc_test(
    name = "longest_substring_vowels",
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    srcs = [
        "com_leetcode_problems_longest_substring_vowels.cc",
        "utils.hpp",
    ],
    deps = [
        "@googletest//:gtest_main",
    ]
)

cc_test(
    name = "longest_subarray_with_max_bitwise_and",
    srcs = [
        "com_leetcode_problems_longest_subarray_with_max_bitwise_and.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "two_keys_keyboard",
    srcs = [
        "com_leetcode_problems_two_keys_keyboard.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ugly_number_ii",
    srcs = [
        "com_leetcode_problems_ugly_number_ii.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "number_of_atoms",
    srcs = [
        "com_leetcode_problems_number_of_atoms.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "min_time_difference",
    srcs = [
        "com_leetcode_problems_min_time_difference.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ipo",
    srcs = [
        "com_leetcode_problems_ipo.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "max_points",
    srcs = [
        "com_leetcode_problems_max_points.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "text_justification",
    srcs = [
        "com_leetcode_problems_text_justification.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)
