cc_library(
    name = "utils",
    copts = ["-std=c++20"],
    srcs = ["utils.hpp"],
    hdrs = ["utils.hpp"],
)

cc_library(
    name = "test_case_helper",
    copts = ["-std=c++20"],
    srcs = ["test_case_helper.hpp", "test_case_helper.cc"],
    hdrs = ["test_case_helper.hpp"],
)

cc_test(
    name = "spiral_matrix_iv",
    copts = ["-std=c++20"],
    srcs = ["com_leetcode_problems_spiral_matrix_iv.cc", "utils.hpp"],
    deps = [
        "@googletest//:gtest_main"
    ]
)

cc_binary(
    name = "cxx20_concepts",
    copts = ["-std=c++20"],
    srcs = ["cxx20_concepts.cc"],
)

cc_test(
    name = "longest_substring_vowels",
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    srcs = [
        "com_leetcode_problems_longest_substring_vowels.cc",
        "utils.hpp",
    ],
    deps = [
        "@googletest//:gtest_main",
    ]
)

cc_test(
    name = "longest_subarray_with_max_bitwise_and",
    srcs = [
        "com_leetcode_problems_longest_subarray_with_max_bitwise_and.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "two_keys_keyboard",
    srcs = [
        "com_leetcode_problems_two_keys_keyboard.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ugly_number_ii",
    srcs = [
        "com_leetcode_problems_ugly_number_ii.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "number_of_atoms",
    srcs = [
        "com_leetcode_problems_number_of_atoms.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "min_time_difference",
    srcs = [
        "com_leetcode_problems_min_time_difference.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ipo",
    srcs = [
        "com_leetcode_problems_ipo.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "max_points",
    srcs = [
        "com_leetcode_problems_max_points.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "text_justification",
    srcs = [
        "com_leetcode_problems_text_justification.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "contiguous_array",
    srcs = [
        "com_leetcode_problems_contiguous_array.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "different_ways_to_add_parentheses",
    srcs = [
        "com_leetcode_problems_different_ways_to_add_parentheses.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "shortest_palindrome",
    srcs = [
        "com_leetcode_problems_shortest_palindrome.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "minimum_deletions_to_make_string_balanced",
    srcs = [
        "com_leetcode_problems_minimum_deletions_to_make_string_balanced.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "lexicographical_numbers",
    srcs = [
        "com_leetcode_problems_lexicographical_numbers.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "zigzag_conversion",
    srcs = [
        "com_leetcode_problems_zigzag_conversion.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "count_of_smaller_numbers_after_self",
    srcs = [
        "com_leetcode_problems_count_of_smaller_numbers_after_self.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)
