cc_library(
    name = "utils",
    copts = ["-std=c++20"],
    srcs = ["utils.hpp"],
    hdrs = ["utils.hpp"],
)

cc_library(
    name = "arena",
    copts = [
        "-std=c++20"
    ],
    srcs = [
        "arena.hpp",
        "arena.cc",
    ],
    hdrs = [
        "arena.hpp",
    ],
)

cc_library(
    name = "test_case_helper",
    copts = ["-std=c++20"],
    srcs = [
        "test_case_helper.hpp",
        "test_case_helper.cc",
        "tree_node.hpp",
        "tree_node.cc",
    ],
    hdrs = [
        "test_case_helper.hpp",
        "tree_node.hpp",
    ],
    deps = [
        "//:arena"
    ],
)

cc_test(
    name = "spiral_matrix_iv",
    copts = ["-std=c++20"],
    srcs = ["com_leetcode_problems_spiral_matrix_iv.cc", "utils.hpp"],
    deps = [
        "@googletest//:gtest_main"
    ]
)

cc_binary(
    name = "cxx20_concepts",
    copts = ["-std=c++20"],
    srcs = ["cxx20_concepts.cc"],
)

cc_test(
    name = "longest_substring_vowels",
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    srcs = [
        "com_leetcode_problems_longest_substring_vowels.cc",
        "utils.hpp",
    ],
    deps = [
        "@googletest//:gtest_main",
    ]
)

cc_test(
    name = "longest_subarray_with_max_bitwise_and",
    srcs = [
        "com_leetcode_problems_longest_subarray_with_max_bitwise_and.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "two_keys_keyboard",
    srcs = [
        "com_leetcode_problems_two_keys_keyboard.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ugly_number_ii",
    srcs = [
        "com_leetcode_problems_ugly_number_ii.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "number_of_atoms",
    srcs = [
        "com_leetcode_problems_number_of_atoms.cc"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "min_time_difference",
    srcs = [
        "com_leetcode_problems_min_time_difference.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ipo",
    srcs = [
        "com_leetcode_problems_ipo.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "max_points",
    srcs = [
        "com_leetcode_problems_max_points.cc",
        "utils.hpp"
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "text_justification",
    srcs = [
        "com_leetcode_problems_text_justification.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "contiguous_array",
    srcs = [
        "com_leetcode_problems_contiguous_array.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "different_ways_to_add_parentheses",
    srcs = [
        "com_leetcode_problems_different_ways_to_add_parentheses.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "shortest_palindrome",
    srcs = [
        "com_leetcode_problems_shortest_palindrome.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "minimum_deletions_to_make_string_balanced",
    srcs = [
        "com_leetcode_problems_minimum_deletions_to_make_string_balanced.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "lexicographical_numbers",
    srcs = [
        "com_leetcode_problems_lexicographical_numbers.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "zigzag_conversion",
    srcs = [
        "com_leetcode_problems_zigzag_conversion.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "count_of_smaller_numbers_after_self",
    srcs = [
        "com_leetcode_problems_count_of_smaller_numbers_after_self.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "kth_smallest_in_lexicographical_order",
    srcs = [
        "com_leetcode_problems_kth_smallest_in_lexicographical_order.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "sum_of_prefix_scores_of_strings",
    srcs = [
        "com_leetcode_problems_sum_of_prefix_scores_of_strings.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "my_calendar_1",
    srcs = [
        "com_leetcode_problems_my_calendar_1.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "my_calendar_2",
    srcs = [
        "com_leetcode_problems_my_calendar_2.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "all_o_one",
    srcs = [
        "com_leetcode_problems_all_o_one.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "find_the_length_of_the_longest_common_prefix",
    srcs = [
        "com_leetcode_problems_find_the_length_of_the_longest_common_prefix.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper"
    ],
)

cc_test(
    name = "make_sum_divisible_by_p",
    srcs = [
        "com_leetcode_problems_make_sum_divisible_by_p.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper"
    ],
)

cc_test(
    name = "divide_players_into_teams_of_equal_skill",
    srcs = [
        "com_leetcode_problems_divide_players_into_teams_of_equal_skill.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "//:utils",
    ],
)

cc_test(
    name = "sentence_similarity_iii",
    srcs = [
        "com_leetcode_problems_sentence_similarity_iii.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "minimum_number_of_swaps_to_make_string_balanced",
    srcs = [
        "com_leetcode_problems_minimum_number_of_swaps_to_make_string_balanced.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "maximum_width_ramp",
    srcs = [
        "com_leetcode_problems_maximum_width_ramp.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "smallest_unoccupied_chair",
    srcs = [
        "com_leetcode_problems_smallest_unoccupied_chair.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "separate_black_and_white_balls",
    srcs = [
        "com_leetcode_problems_separate_black_and_white_balls.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "count_square_submatrices_with_all_ones",
    srcs = [
        "com_leetcode_problems_count_square_submatrices_with_all_ones.cc",
    ],
    copts = [
        "-std=c++20",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "remove_subfolders",
    srcs = [
        "com_leetcode_problems_remove_subfolders_from_the_filesystem.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "min_removals_to_make_mountain_array",
    srcs = [
        "com_leetcode_problems_min_removals_to_make_mountain_array.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "kth_largest_sum_in_binary_tree",
    srcs = [
        "com_leetcode_problems_kth_largest_sum_in_binary_tree.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "beautiful_binary_string",
    srcs = [
        "com_leetcode_problems_beautiful_binary_string.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "split_string_into_max_number_of_unique_substrings",
    srcs = [
        "com_leetcode_problems_split_string_into_max_number_of_unique_substrings.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "largest_combination_with_bitwise_and_greater_than_zero",
    srcs = [
        "com_leetcode_problems_largest_combination_with_bitwise_and_greater_than_zero.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "maximum_xor_for_each_query",
    srcs = [
        "com_leetcode_problems_maximum_xor_for_each_query.cc",
    ],
    copts = [
        "-std=c++23",
        "-O3",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "minimum_array_end",
    srcs = [
        "com_leetcode_problems_minimum_array_end.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "parsing_a_boolean_expression",
    srcs = [
        "com_leetcode_problems_parsing_a_boolean_expression.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "shortest_subarray_with_or_at_least_k_ii",
    srcs = [
        "com_leetcode_problems_shortest_subarray_with_or_at_least_k_ii.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "prime_subtraction_operation",
    srcs = [
        "com_leetcode_problems_prime_subtraction_operation.cc",
    ],
    copts = [
        "-std=c++23",
        "-O3",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "maximum_swap",
    srcs = [
        "com_leetcode_problems_maximum_swap.cc",
    ],
    copts = [
        "-std=c++23",
        "-O3",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@google_benchmark//:benchmark",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "most_beautiful_item_for_each_query",
    srcs = [
        "com_leetcode_problems_most_beautiful_item_for_each_query.cc",
    ],
    copts = [
        "-std=c++23",
        "-O3",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "count_the_number_of_fair_pairs",
    srcs = [
        "com_leetcode_problems_count_the_number_of_fair_pairs.cc",
    ],
    copts = [
        "-std=c++23",
        "-O3",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "minimized_maximum_of_products_distributed_to_any_store",
    srcs = [
        "com_leetcode_problems_minimized_maximum_of_products_distributed_to_any_store.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "shortest_subarray_to_be_removed_to_make_array_sorted",
    srcs = [
        "com_leetcode_problems_shortest_subarray_to_be_removed_to_make_array_sorted.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "koko_eating_bananas",
    srcs = [
        "com_leetcode_problems_koko_eating_bananas.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
        "//:test_case_helper",
    ],
)

cc_test(
    name = "find_the_power_of_k-size_subarrays_i",
    srcs = [
        "com_leetcode_problems_find_the_power_of_k-size_subarrays_i.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "shortest_subarray_with_sum_at_least_k",
    srcs = [
        "com_leetcode_problems_shortest_subarray_with_sum_at_least_k.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "defuse",
    srcs = [
        "com_leetcode_problems_defuse.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "maximum_sum_of_distinct_subarrays_with_length_k",
    srcs = [
        "com_leetcode_problems_maximum_sum_of_distinct_subarrays_with_length_k.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "take_k_of_each_character_from_left_and_right",
    srcs = [
        "com_leetcode_problems_take_k_of_each_character_from_left_and_right.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)

cc_test(
    name = "count_unguarded_cells_in_the_grid",
    srcs = [
        "com_leetcode_problems_count_unguarded_cells_in_the_grid.cc",
    ],
    copts = [
        "-std=c++23",
        "-O0",
        "-g3",
        "-Wall",
        "-Werror",
        "-fsanitize=address,undefined",
    ],
    linkopts = [
        "-fsanitize=address,undefined",
    ],
    deps = [
        "@googletest//:gtest",
        "@fmt//:fmt",
    ],
)
