module(
    name = "cpp_sandbox",
    repo_name = "com_github_proprietary_sandbox"
)

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "fmt", version = "11.0.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
)
